--- a/docker/compose/web/dev/Dockerfile
+++ b/docker/compose/web/dev/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:latest
 
-COPY . /app
-
 WORKDIR /app
+COPY package.json .
 RUN npm install
+
+COPY . /app
 
 COPY ./docker/compose/web/dev/start.sh /start.sh
 RUN sed -i 's/\r//' /start.sh
